Missing includes that were previously provided via UnifiedSources https://bugs.webkit.org/show_bug.cgi?id=196434

Unreviewed build fix.

Patch by Pablo Saavedra <psaavedra@igalia.com> on 2019-04-03

* html/InputType.h:

Canonical link: https://commits.webkit.org/210795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243799 268f45cc-cd09-0410-ab3c-d52691b4dbfc